added slider section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<div class="slider-wrapper">
+    <section class="slider">
+        <div class="slider__column">
+            <h2 class="slider__title"></h2>
+            <p class="slider__text"></p>
+            <div class="app-store">
+                <a href="" class="app-store__link">
+                    <img src="" alt="" class="app-store__icon">
+                </a>
+            </div>
+        </div>
+        <div class="slider__column">
+            <img src="" alt="" class="slider__img">
+        </div>
+    </section>
+</div>
 </body>
 </html>
