stylized slider section

--- a/index.html
+++ b/index.html
@@ -9,18 +9,27 @@
 </head>
 <body>
 <div class="slider-wrapper">
-    <section class="slider">
+    <section class="slider container">
         <div class="slider__column">
-            <h2 class="slider__title"></h2>
-            <p class="slider__text"></p>
-            <div class="app-store">
-                <a href="" class="app-store__link">
-                    <img src="" alt="" class="app-store__icon">
+            <h2 class="slider__title">Stay focused on saving money</h2>
+            <p class="slider__text">It is important to stay focused on saving money in any way you can. We help&nbsp;you
+                monitor your spending habits so you can easily spot and cut any unnecessary expenses. Simply join today
+                to get started!
+            </p>
+            <div class="app-download">
+                <a href="#" class="app-download__link">
+                    <img src="assets/img/logo-google-playstore.svg" alt="" class="app-download__icon">
+                </a>
+                <a href="#" class="app-download__link">
+                    <img src="assets/img/logo-apple-appstore.svg" alt="" class="app-download__icon">
+                </a>
+                <a href="#" class="app-download__link">
+                    <img src="assets/img/logo-windows-store.svg" alt="" class="app-download__icon">
                 </a>
             </div>
         </div>
         <div class="slider__column">
-            <img src="" alt="" class="slider__img">
+            <img src="assets/img/slider-img.jpg" alt="" class="slider__img">
         </div>
     </section>
 </div>
