added and stylized the footer section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,70 @@
         </div>
     </section>
 </div>
+<div class="footer-wrapper">
+    <footer class="footer container">
+        <nav class="footer-nav">
+            <div class="footer-nav__item">
+                <h3 class="footer-nav__title">Address</h3>
+                <p class="footer__text">
+                    Pipang Ltd, Griva Digeni, 81&nbsp;-&nbsp;83 Jacovides Tower, 1st Floor 1090 Picosia USA
+                </p>
+            </div>
+            <div class="footer-nav__item">
+                <h3 class="footer-nav__title">Services</h3>
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-list__item">
+                        <a href="#" class="footer-nav-list__link">overview</a>
+                    </li>
+                    <li class="footer-nav-list__item">
+                        <a href="#" class="footer-nav-list__link">features</a>
+                    </li>
+                    <li class="footer-nav-list__item">
+                        <a href="#" class="footer-nav-list__link">technology</a>
+                    </li>
+                    <li class="footer-nav-list__item">
+                        <a href="#" class="footer-nav-list__link">Terms & Conditions</a>
+                    </li>
+                    <li class="footer-nav-list__item">
+                        <a href="#" class="footer-nav-list__link">Privecy</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nav__item">
+                <h3 class="footer-nav__title">Get in Touch</h3>
 
+                <div class="contacts">
+                    <a class="contacts__mail" href="mailto:info@cloudbudget.com">info@cloudbudget.com</a>
+                    <a class="contacts__phone" href="tel:+18447217120">+1 844-721-7120</a>
+                </div>
+
+                <div class="social">
+                    <div class="social__item">
+                        <a href="#" class="social__link">
+                            <img src="assets/img/facebook-icon.svg" alt="" class="social__img">
+                        </a>
+                    </div>
+                    <div class="social__item">
+                        <a href="#" class="social__link">
+                            <img src="assets/img/linkedin-icon.svg" alt="" class="social__img">
+                        </a>
+                    </div>
+                    <div class="social__item">
+                        <a href="#" class="social__link">
+                            <img src="assets/img/twitter-icon.svg" alt="" class="social__img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-nav__item">
+                <h3 class="footer-nav__title">We Support</h3>
+                <img src="assets/img/credit-card-support.jpg" alt="">
+            </div>
+        </nav>
+        <div class="footer__info">
+            <p class="copyright">Copyright 2018 CloudBudget</p>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
