change image format in footer section 'We Support' to the png

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="footer-nav__item">
                 <h3 class="footer-nav__title">We Support</h3>
-                <img src="assets/img/credit-card-support.jpg" alt="">
+                <img src="assets/img/credit-card-support.png" alt="">
             </div>
         </nav>
         <div class="footer__info">
